; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_ll_clear.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_ll_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ll_entry = type { %struct.ll_entry* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ll_clear(%struct.ll_entry** %0) #0 {
  %2 = alloca %struct.ll_entry**, align 8
  %3 = alloca %struct.ll_entry*, align 8
  %4 = alloca %struct.ll_entry*, align 8
  store %struct.ll_entry** %0, %struct.ll_entry*** %2, align 8
  %5 = load %struct.ll_entry**, %struct.ll_entry*** %2, align 8
  %6 = load %struct.ll_entry*, %struct.ll_entry** %5, align 8
  store %struct.ll_entry* %6, %struct.ll_entry** %3, align 8
  %7 = icmp ne %struct.ll_entry* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.ll_entry**, %struct.ll_entry*** %2, align 8
  store %struct.ll_entry* null, %struct.ll_entry** %9, align 8
  br label %10

10:                                               ; preds = %13, %8
  %11 = load %struct.ll_entry*, %struct.ll_entry** %3, align 8
  %12 = icmp ne %struct.ll_entry* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %10
  %14 = load %struct.ll_entry*, %struct.ll_entry** %3, align 8
  %15 = getelementptr inbounds %struct.ll_entry, %struct.ll_entry* %14, i32 0, i32 0
  %16 = load %struct.ll_entry*, %struct.ll_entry** %15, align 8
  store %struct.ll_entry* %16, %struct.ll_entry** %4, align 8
  %17 = load %struct.ll_entry*, %struct.ll_entry** %3, align 8
  %18 = call i32 @free(%struct.ll_entry* %17)
  %19 = load %struct.ll_entry*, %struct.ll_entry** %4, align 8
  store %struct.ll_entry* %19, %struct.ll_entry** %3, align 8
  br label %10

20:                                               ; preds = %10
  br label %21

21:                                               ; preds = %20, %1
  ret void
}

declare dso_local i32 @free(%struct.ll_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
